# ambiente-de-desenvolvimento

./: .gitignore  README.md  pyproject.toml  run.bat  run.ps1  run_admin.bat
src/glassfish_monitor/: __init__.py  __main__.py  app.py  config.py
src/glassfish_monitor/services/: __init__.py  glassfish_service.py  monitor_service.py  mysql_service.py  postgres_service.py  process_manager.py
src/glassfish_monitor/ui/: __init__.py  main_window.py
src/glassfish_monitor/ui/styles/: themes.py
src/glassfish_monitor/ui/tabs/: __init__.py  database_tab.py  future_tab.py  glassfish_tab.py
src/glassfish_monitor/ui/widgets/: __init__.py  log_viewer.py  metrics_panel.py  status_widget.py
src/glassfish_monitor/utils/: __init__.py  logger.py  platform_utils.py
tests/: __init__.py  conftest.py
tests/test_services/: __init__.py  test_glassfish_service.py
