[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glassfish-monitor"
version = "1.0.0"
description = "Aplicação desktop para monitoramento do GlassFish Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ronald Guilhon" },
]
dependencies = [
    "PySide6>=6.5.0",
    "psutil>=5.9.0",
    "pyqtgraph>=0.13.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
glassfish-monitor = "glassfish_monitor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/glassfish_monitor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
